compiler/testData/cli/jvm/stdlibWithFirErrors.out
warning: ATTENTION!
This build uses unsafe internal compiler arguments:

-XXLanguage:+MultiPlatformProjects

This mode is not recommended for production use,
as no stability/compatibility guarantees are given on
compiler or generated code. Use it at your own risk!

compiler/testData/cli/jvm/stdlibWithFirErrors/common.kt:8:30: error: 'clone' overrides nothing.
public expect abstract class Enum<E : Enum<E>>: Comparable<E> {
                             ^^^^
compiler/testData/cli/jvm/stdlibWithFirErrors/common.kt:8:30: error: 'getDeclaringClass' overrides nothing.
public expect abstract class Enum<E : Enum<E>>: Comparable<E> {
                             ^^^^
compiler/testData/cli/jvm/stdlibWithFirErrors/common.kt:8:30: error: 'finalize' overrides nothing.
public expect abstract class Enum<E : Enum<E>>: Comparable<E> {
                             ^^^^
COMPILATION_ERROR
